# pdf-toc

./: .dockerignore  .gitignore  CLAUDE.md  DOCKER.md  Dockerfile  README.md  custom_parser_example.py  docker-entrypoint.sh  mcp_server.py  parsers.py  pdf_toc_embedder.py  pyproject.toml  requirements.txt  toc.txt
.claude/skills/: pdf-toc.claude
