[project]
name = "pdf-toc-embedder"
version = "0.1.0"
description = "PDF目录嵌入工具 - 解析目录文本文件并将目录嵌入到指定PDF中"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PyPDF2>=3.0.0",
    "mcp>=0.1.0",
]

[project.scripts]
pdf-toc-embedder = "pdf_toc_embedder:main"
pdf-toc = "pdf_toc_embedder:main"
pdf-toc-mcp = "mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
